// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Lines should render for index 0 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Lines
    activeIndex={0}
    colourScheme={
      Object {
        "active": "#FFFFFF",
        "inactive": "#DDDDDD",
        "pressed": "#EEEEEE",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Rect
          fill="#DDDDDD"
          height="3"
          rx={0}
          ry={0}
          width="84.9"
          x="130.1"
          y="85.5"
        />,
        <Rect
          fill="#DDDDDD"
          height="3"
          rx={0}
          ry={0}
          width="96.4"
          x="288"
          y="85.5"
        />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "fill": "#DDDDDD",
          "height": "3",
          "rx": 0,
          "ry": 0,
          "width": "84.9",
          "x": "130.1",
          "y": "85.5",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "fill": "#DDDDDD",
          "height": "3",
          "rx": 0,
          "ry": 0,
          "width": "96.4",
          "x": "288",
          "y": "85.5",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Rect
            fill="#DDDDDD"
            height="3"
            rx={0}
            ry={0}
            width="84.9"
            x="130.1"
            y="85.5"
          />,
          <Rect
            fill="#DDDDDD"
            height="3"
            rx={0}
            ry={0}
            width="96.4"
            x="288"
            y="85.5"
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "fill": "#DDDDDD",
            "height": "3",
            "rx": 0,
            "ry": 0,
            "width": "84.9",
            "x": "130.1",
            "y": "85.5",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "fill": "#DDDDDD",
            "height": "3",
            "rx": 0,
            "ry": 0,
            "width": "96.4",
            "x": "288",
            "y": "85.5",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Lines should render for index 1 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Lines
    activeIndex={1}
    colourScheme={
      Object {
        "active": "#FFFFFF",
        "inactive": "#DDDDDD",
        "pressed": "#EEEEEE",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Rect
          fill="#DDDDDD"
          height="3"
          rx={0}
          ry={0}
          width="73.5"
          x="108.8"
          y="85.5"
        />,
        <Rect
          fill="#DDDDDD"
          height="3"
          rx={0}
          ry={0}
          width="62.2"
          x="322.4"
          y="85.5"
        />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "fill": "#DDDDDD",
          "height": "3",
          "rx": 0,
          "ry": 0,
          "width": "73.5",
          "x": "108.8",
          "y": "85.5",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "fill": "#DDDDDD",
          "height": "3",
          "rx": 0,
          "ry": 0,
          "width": "62.2",
          "x": "322.4",
          "y": "85.5",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Rect
            fill="#DDDDDD"
            height="3"
            rx={0}
            ry={0}
            width="73.5"
            x="108.8"
            y="85.5"
          />,
          <Rect
            fill="#DDDDDD"
            height="3"
            rx={0}
            ry={0}
            width="62.2"
            x="322.4"
            y="85.5"
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "fill": "#DDDDDD",
            "height": "3",
            "rx": 0,
            "ry": 0,
            "width": "73.5",
            "x": "108.8",
            "y": "85.5",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "fill": "#DDDDDD",
            "height": "3",
            "rx": 0,
            "ry": 0,
            "width": "62.2",
            "x": "322.4",
            "y": "85.5",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Lines should render for index 2 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Lines
    activeIndex={2}
    colourScheme={
      Object {
        "active": "#FFFFFF",
        "inactive": "#DDDDDD",
        "pressed": "#EEEEEE",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Rect
          fill="#DDDDDD"
          height="3"
          rx={0}
          ry={0}
          width="106.6"
          x="108.8"
          y="85.5"
        />,
        <Rect
          fill="#DDDDDD"
          height="3"
          rx={0}
          ry={0}
          width="86.1"
          x="288.1"
          y="85.5"
        />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "fill": "#DDDDDD",
          "height": "3",
          "rx": 0,
          "ry": 0,
          "width": "106.6",
          "x": "108.8",
          "y": "85.5",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "fill": "#DDDDDD",
          "height": "3",
          "rx": 0,
          "ry": 0,
          "width": "86.1",
          "x": "288.1",
          "y": "85.5",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Rect
            fill="#DDDDDD"
            height="3"
            rx={0}
            ry={0}
            width="106.6"
            x="108.8"
            y="85.5"
          />,
          <Rect
            fill="#DDDDDD"
            height="3"
            rx={0}
            ry={0}
            width="86.1"
            x="288.1"
            y="85.5"
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "fill": "#DDDDDD",
            "height": "3",
            "rx": 0,
            "ry": 0,
            "width": "106.6",
            "x": "108.8",
            "y": "85.5",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "fill": "#DDDDDD",
            "height": "3",
            "rx": 0,
            "ry": 0,
            "width": "86.1",
            "x": "288.1",
            "y": "85.5",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
